--- a/static/app/content/site.css
+++ b/static/app/content/site.css
@@ -100,3 +100,17 @@ iframe {
   padding-left: 0;
   padding-right: 0;
 }
+
+#post_topic {
+  display: block;
+}
+
+.footer-push-wrapper {
+  min-height: 100%;
+  height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+  height: 100%;
+  margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+  height: 155px; /* .push must be the same height as .footer */
+}
