--- a/static/app/content/site.css
+++ b/static/app/content/site.css
@@ -105,12 +105,39 @@ iframe {
   display: block;
 }
 
+/* ensure footer stays at the bottom of page */
+
 .footer-push-wrapper {
   min-height: 100%;
   height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
   height: 100%;
   margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
 }
+
 .footer, .push {
   height: 155px; /* .push must be the same height as .footer */
+}
+
+/* sizing and alignment of the change_list_add_button in admin */
+
+#float-right {
+  float: right
+}
+
+/* admin detail view header */
+
+#admin-header {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: inherit;
+  color: #333333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+#admin-form-control {
+  max-width: none;
 }
