added create thread

--- a/app/templates/app/thread.html
+++ b/app/templates/app/thread.html
@@ -29,7 +29,7 @@
 			<tr>
 				<td>
 					<button type="button" class="btn btn-default">
-						New Topic
+						<a href="{% url 'create_thread' %}">New Topic</a>
 					</button>
 				</td>
 				<td></td>
