--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -121,7 +121,10 @@ iframe {
 /* sizing and alignment of the change_list_add_button in admin */
 
 #float-right {
-  float: right
+  float: right;
+}
+#float-text-right {
+  text-align: right;
 }
 
 /* admin detail view header */
