added view counter to threads

--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -19,8 +19,7 @@
 			<div class="panel-heading">
 				<div class="row">
 					<div class="col-xs-6">
-						#{{ post.rank }}
-						{{ post.Creator }}
+						#{{ post.rank }} {{ post.Creator_name }}
 					</div>
 					<div id="float-text-right" class="col-xs-6">
 						{{ post.last_touch }}
