added partial password recovery in, deleted email password for security

--- a/app/templates/app/alert.html
+++ b/app/templates/app/alert.html
@@ -1,7 +1,9 @@
 ﻿{% extends "app/layout.html" %}
 
 {% block content %}
-
-{{msg}}
-
+<div class="container">
+	<div class="alert alert-success">
+		{{msg}}
+	</div>
+</div>
 {% endblock %}
