--- a/app/templates/app/create_user.html
+++ b/app/templates/app/create_user.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
-{% crispy form %}
+<div class="container">
+	<div class="well">
+	{% crispy form %}
+	</div>
+</div>
 
 {% endblock %}
