--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -10,7 +10,7 @@
         {{form|crispy}}
         <div class="row">
             <div class="col-xs-4">
-                <a href="#">Forgot Password</a>
+                <a href="{% url 'password_reset_recover' %}">Forgot Password</a>
                 <a href={% url 'createuser' %}>Register</a>
             </div>
             <div class="col-xs-4">
