--- a/app/templates/app/lecture_slide.html
+++ b/app/templates/app/lecture_slide.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div id="iframe_div">
-    <iframe class="googledocsviewer" src="{{ current_lecture.lecture_slide }}" border="0"></iframe>
-</div>
+
+    <iframe class="googledocsviewer" src="{{ current_lecture.lecture_slide }}" border="0" height: "600px"></iframe>
+
 
 {% endblock %}
 
