--- a/app/templates/app/sidebar.html
+++ b/app/templates/app/sidebar.html
@@ -10,19 +10,33 @@
             <a href="{% url 'thread' %}">Posts</a>
         </li>
         {% if current_quiz_list %}<!--current quiz list-->
-        <li>
-            New Quizzes
-        </li>
-        <li>
-            <ul>
-                {% for quiz in current_quiz_list %}
-                    <li>
-                        <a href="{% url 'quiz' quiz.Lecture.id quiz.Lecture.slug quiz.id quiz.question %}"> {{ quiz.question }} </a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </li>
+            <li>
+                New Quizzes
+            </li>
+            <li>
+                <ul>
+                    {% for quiz in current_quiz_list %}
+                        <li>
+                            <a href="{% url 'quiz' quiz.Lecture.id quiz.Lecture.slug quiz.id quiz.question %}"> {{ quiz.question }} </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </li>
         {% endif %} <!-- endif current quiz list-->
+        {% if current_wordcloud_list %}
+            <li>
+                New Wordclouds
+            <li>
+            <li>
+                <ul>
+                    {% for wordcloud in current_wordcloud_list %}
+                        <li>
+                            <a href="{% url 'wordcloud' wordcloud.Lecture.id wordcloud.Lecture.slug wordcloud.id wordcloud.title %}"> {{ wordcloud.title }} </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endif %}
         {% for lecture in lecture_list %}
             <li>
                 <a href="{% url 'lecture' lecture.id lecture.slug %}">{{ lecture.lecture_name }}</a>
