added restraint in wordcloudsubmission for one words inputs, refactored out BaseSidebarContextMixin

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -28,7 +28,7 @@
                 </button>
             {% endif %}
             {% if user.is_authenticated %}
-            <a href="{% url 'root' %}" class="navbar-brand">Welcome {{ user.first_name }} {{ user.last_name }} </a>
+            <a href="{% url 'index' %}" class="navbar-brand">Welcome {{ user.first_name }} {{ user.last_name }} </a>
             {% else %}
             <a href="{% url 'root' %}" class="navbar-brand">Welcome to LMSUNSW</a>
             {% endif %}
