--- a/app/templates/app/sidebar.html
+++ b/app/templates/app/sidebar.html
@@ -4,7 +4,7 @@
             {% include "app/confidence_meter.html" %}
         </li>
         <li>
-            <a href="{% url 'root' %}"> Index </a>
+            <a href="{% url 'index' %}"> Index </a>
         </li>
         <li>
             <a href="{% url 'thread' %}">Posts</a>
