--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,11 +1,142 @@
 {% extends "app/layout.html" %}
 
 {% block content %}
+<h1 class="page-header">
+	Dashboard
+</h1>
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Quick Settings
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('quick-settings-panel', 'quick-settings-btn');">
+	                    <span id="quick-settings-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="quick-settings-panel">
+			
+		</div>
+	</div>
+</div>
 
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Class Confidence
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('confidence-meter-panel', 'confidence-meter-btn');">
+	                    <span id="confidence-meter-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="confidence-meter-panel">
+			<div id="placeholder" style="width:100%;height:300px"></div>
+		</div>
+	</div>
+</div>
 
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Quick Create Quiz
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('quick-quiz-panel', 'quick-quiz-btn');">
+	                    <span id="quick-quiz-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="quick-quiz-panel">
+			<div id="placeholder" style="width:100%;height:300px"></div>
+		</div>
+	</div>
+</div>
+
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Quiz Results Summaries
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('quiz-results-panel', 'quiz-results-btn');">
+	                    <span id="quiz-results-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="quiz-results-panel">
+			<div id="placeholder" style="width:100%;height:300px"></div>
+		</div>
+	</div>
+</div>
+
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Quick Create Wordcloud
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('quick-wordcloud-panel', 'quick-wordcloud-btn');">
+	                    <span id="quick-wordcloud-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="quick-wordcloud-panel">
+			<div id="placeholder" style="width:100%;height:300px"></div>
+		</div>
+	</div>
+</div>
+
+<div class="col-md-6 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel panel-heading">
+			<div id="float-left">
+				Quick Create Code Snippet
+			</div>
+			<div id="float-text-right">
+				<button class="btn btn-default" onclick="minimize_panel('quick-code-panel', 'quick-code-btn');">
+	                    <span id="quick-code-btn" class="glyphicon glyphicon-chevron-up"></span>
+	            </button>
+			</div>
+		</div>
+		<div class="panel panel-body" id="quick-code-panel">
+			<div id="placeholder" style="width:100%;height:300px"></div>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
 
+{% block scripts %}
+
+<script type="text/javascript">
+	
+	var data = [
+    { label: "Asia", data: 4119630000, color: "#005CDE" },
+    { label: "Latin America", data: 590950000, color: "#00A36A" },
+    { label: "Africa", data: 1012960000, color: "#7D0096" },
+    { label: "Oceania", data: 35100000, color: "#992B00" },
+    { label: "Europe", data: 727080000, color: "#DE000F" },
+    { label: "North America", data: 344120000, color: "#ED7B00" }    
+];
+	$.plot('#placeholder', data, {
+    series: {
+        pie: {
+            show: true
+
+        }
+    }
+});
+</script>
+{% endblock %}
+
 {% block sidebar %}
-	{% include "admin/sidebar.html" %}
+    {% include "admin/sidebar.html" %}
 {% endblock %}
