--- a/app/templates/admin/sidebar.html
+++ b/app/templates/admin/sidebar.html
@@ -2,7 +2,7 @@
     <ul class="sidebar-nav">
     	{% if app_list %}
         	<li>
-            	<a href="{% url 'index' %}"> Index </a>
+            	<a href="{% url 'index' %}"> Student View </a>
         	</li>
 		    {% for app in app_list %}
 		        {% for model in app.models %}
@@ -13,42 +13,6 @@
 		            {% endif %}
 		        {% endfor %}
 		    {% endfor %}
-		{% else %}
-			<li>
-	            {% include "app/confidence_meter.html" %}
-	        </li>
-			<li>
-            	<a href="{% url 'index' %}"> Index </a>
-        	</li>
-			<li>
-	            <a href="{% url 'thread' %}">Posts</a>
-	        </li>
-		    	{% for lecture in lecture_list %}
-			        <li>
-			            <a href="{% url 'lecture' lecture.id lecture.slug %}">{{ lecture.lecture_name }}</a>
-			            {% if lecture.id == current_lecture.id %}
-			                <ul>
-			                    {% if current_lecture.lecture_slide %}
-			                    <li>
-			                        <a href="{% url 'lecture_slide' lecture.id lecture.slug %}">Lecture Slides</a>
-			                    </li>
-			                    {% endif %}
-			                    
-			                    <!--Quiz sub-list-->
-			                    {% if quiz_list %}
-			                    <li>
-			                        Quizzes
-			                    </li>
-			                    {% endif %}
-			                    {% for quiz in quiz_list %}
-			                    <li>
-			                        <a href="{% url 'quiz' lecture.id lecture.slug quiz.id quiz.question %}"> {{ quiz.question }} </a>
-			                    </li>
-			                    {% endfor %}
-			                </ul>
-			            {% endif %}
-			        </li>
-		    	{% endfor %}
     	{% endif %}
     </ul>
 </div>
