--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -80,9 +80,13 @@
                 </div>
         </div>
         {% endif %}
-    <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
-    <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
-    <script src="{% static 'app/scripts/respond.js' %}"></script>
+    <script src="{% static 'app/scripts/jquery-1.10.2.min.js' %}"></script>
+    <script src="{% static 'app/scripts/bootstrap.min.js' %}"></script>
+    <script src="{% static 'app/scripts/respond.min.js' %}"></script>
+    <script src="{% static 'app/scripts/flot/jquery.flot.min.js' %}"></script>
+<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
+    <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
+
     <script src="{% static 'app/scripts/site.js' %}"></script>
     {% include 'session_security/all.html' %}
     {% if user.is_authenticated %}
