--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="panel panel-body" id="confidence-meter-panel">
-			<div id="placeholder" style="width:100%;height:300px"></div>
+			<div id="confidence-graph" style="width:100%;height:300px"></div>
 		</div>
 	</div>
 </div>
@@ -116,24 +116,52 @@
 
 {% block scripts %}
 
-<script type="text/javascript">
-	
-	var data = [
-    { label: "Asia", data: 4119630000, color: "#005CDE" },
-    { label: "Latin America", data: 590950000, color: "#00A36A" },
-    { label: "Africa", data: 1012960000, color: "#7D0096" },
-    { label: "Oceania", data: 35100000, color: "#992B00" },
-    { label: "Europe", data: 727080000, color: "#DE000F" },
-    { label: "North America", data: 344120000, color: "#ED7B00" }    
-];
-	$.plot('#placeholder', data, {
-    series: {
-        pie: {
-            show: true
 
-        }
-    }
-});
+
+<script type="text/javascript">
+
+	function plot_confidence(data) {
+	    flot_data = []
+	    Object.keys(data).forEach(function (key) {
+	    	var value = data[key]
+	    	color = ''
+	    	/* place in each if statement to prevent key 'current' from being in the graph */
+	    	if (key=='good') {
+	    		color="#5cb85c"
+	    		flot_data.push({label: key, data: value, color: color})
+	    	}
+	    	if (key=='neutral') {
+	    		color="#f0ad4e"
+	    		flot_data.push({label: key, data: value, color: color})
+	    	}
+	    	if (key=='bad') {
+	    		color="#d9534f"
+	    		flot_data.push({label: key, data: value, color: color})
+	    	}
+	    });
+		$.plot('#confidence-graph', flot_data, {
+	    series: {
+	        pie: {
+	            show: true
+	        	}
+	    	}
+	    });
+	}
+	
+	var ping_interval = 100*15
+    setInterval(function() {
+        $.ajax({
+	        type: "GET",
+	        url:  "/poll/",
+	        dataType: 'json',
+	        success: function (data) {
+	        	plot_confidence(data)
+	        },
+	        error: function(response){
+	        },
+    	});
+        }, ping_interval
+    )
 </script>
 {% endblock %}
 
