--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -5,30 +5,19 @@
 <div class="login-form">
     <h2>{{ title }}</h2>
     <form  method="post">
-        <!--Built-in auth form excludes the submit button, must manually add in-->
+        <!--need to place submit button out of standard order, must manually add in-->
         {% csrf_token %}
         {{form|crispy}}
         <div class="row">
             <div class="col-xs-4">
                 <a href="{% url 'password_reset_recover' %}">Forgot Password</a>
-                <a href={% url 'createuser' %}>Register</a>
+                <a href="{% url 'createuser' %}">Register</a>
             </div>
             <div class="col-xs-4">
                 <input class="btn btn-primary" style="" type="submit" value="Log In"/>
             </div>
         </div>
-        
     </form>
-    
-
 </div>
-
-{% endblock %}
-
-
-{% block scripts %}
-
-    {% load staticfiles %}
-<script src="{% static 'scripts/jquery.validate.min.js' %}"></script>
 
 {% endblock %}
