--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -95,7 +95,22 @@
 			</div>
 		</div>
 		<div class="panel panel-body" id="quiz-results-panel">
-			
+			<table>
+				<thead></thead>
+				<tbody>
+					{% for quiz in recent_quizzes %}
+						{% for question, choices in quiz.items %}
+							<tr><td>{{question}}</td></tr>
+							<tr>
+								{% for choice in choices %}
+									<td>{{choice}}</td>
+								{% endfor %}
+							</tr>
+						{% endfor %}
+					
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
 	</div>
 
