--- a/app/templates/app/wordcloud_submission.html
+++ b/app/templates/app/wordcloud_submission.html
@@ -8,7 +8,7 @@
 	<div class="panel-heading">
 		{{ wordcloud.title }}
 	</div>
-	<div class="panel-body">
+	<div class="panel-body" style="padding: 0">
 		<img class="img-responsive" src={{wordcloud.image.url}}>
 	</div>
 </div>
