linking code snippets to a lecture, redesigning sidebar and navbar

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -111,24 +111,8 @@
 				{% endfor %}
 				</table>
 			{% endfor %}
+		</div>
 
-<!--			<table>
-				<thead></thead>
-				<tbody>
-					{% for quiz in recent_quizzes %}
-						{% for question, choices in quiz.items %}
-							<tr><td>{{question}}</td></tr>
-							<tr>
-								{% for choice in choices %}
-									<td>{{choice}}</td>
-								{% endfor %}
-							</tr>
-						{% endfor %}
-					
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>-->
 	</div>
 
 	<div class="panel panel-primary">
