added code snippets page and tabs for navbar

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -14,53 +14,7 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-header">
-            {% if user.is_authenticated %}
-                <button href="#menu-toggle" id="menu-toggle" class="navbar-toggle">
-                        <span id="toggle-arrow" class="glyphicon glyphicon-chevron-right white"></span>
-                </button>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            {% endif %}
-            {% if user.is_authenticated %}
-            <a href="{% url 'index' %}" class="navbar-brand">Welcome {{ user.first_name }} {{ user.last_name }} </a>
-            {% else %}
-            <a href="{% url 'root' %}" class="navbar-brand">Welcome to LMSUNSW</a>
-            {% endif %}
-        </div>
-        {% if user.is_authenticated %}
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <!--buttons on the top right of the nav bar-->
-                {% if user.is_superuser %}
-                <!--Super User has link directly into admin pages-->
-                <li>
-                    <a href="/admin">Administration</a>
-                </li>
-                {% else %}
-                <!--Normal users have link to their account pages-->
-                <li>
-                    <a href="/settings/auth/user/{{ user.id }}">Settings</a>
-                </li>
-                <li>
-                    <a href="/settings/app/userprofile/{{ user.UserProfile.id }}/">Profile</a>
-                </li>
-                <li>
-                    <a href="#">Help</a>
-                </li>
-                {% endif %}
-                <li>
-                    <a href="/logout">Logout</a>
-                </li>
-            </ul>
-        </div>
-        {% endif %}
-    </div>
+    {% include "app/navbar.html" %}
         {% if user.is_authenticated %}
         <div id="wrapper"> 
                 {% block sidebar %}{% endblock %}
