--- a/app/templates/admin/sidebar.html
+++ b/app/templates/admin/sidebar.html
@@ -1,5 +1,6 @@
+
 <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
+    <ul class="nav nav-pills nav-stacked">
     	
     	<li>
         	<a href="{% url 'index' %}">{% if user.is_superuser %}Student View{% else %}Index{% endif %}</a>
