--- a/app/templates/app/sidebar.html
+++ b/app/templates/app/sidebar.html
@@ -1,15 +1,30 @@
+{% load current from templatetag %}
+
+
 <div id="sidebar-wrapper" role="navigation">
 
     {% include "app/confidence_meter.html" %}
 
     <ul class="nav nav-pills nav-stacked">
-        <li>
-            <a href="{% url 'index' %}"> Index </a>
-        </li>
-        <li>
+        
+        {% if lecture_list %}
+            <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                    Lectures <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    {% for lecture in lecture_list %}
+                        <li>
+                            <a href="{% url 'lecture' lecture.id lecture.slug %}">{{ lecture.lecture_name }}</a>
+
+                        </li>
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endif %}<!--end if lecture_list-->
+        <li class="{% current 'thread' %}">
             <a href="{% url 'thread' %}">Posts</a>
         </li>
-
         {% if current_quiz_list %}<!--current quiz list-->
             <li role="presentation" class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
@@ -27,7 +42,7 @@
 
 
         {% if current_wordcloud_list %}
-            <li role="presentation" class="dropdown">
+            <li role="presentation" class="dropdown {% current 'wordcloud' %}">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
                     New Wordclouds <span class="caret"></span>
                 </a>
@@ -40,21 +55,5 @@
                 </ul>
             </li>
         {% endif %}
-
-        {% if lecture_list %}
-        <li role="presentation" class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-                    Lectures <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    {% for lecture in lecture_list %}
-                        <li>
-                            <a href="{% url 'lecture' lecture.id lecture.slug %}">{{ lecture.lecture_name }}</a>
-
-                        </li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endif %}<!--end if lecture_list-->
     </ul>
 </div>
