changed lecture_slide field type from URLField to FileField to accept local files over online files

--- a/app/templates/app/lecture_slide.html
+++ b/app/templates/app/lecture_slide.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <iframe class="googledocsviewer" src="{{ current_lecture.lecture_slide }}" border="0" height: "600px"></iframe>
+    <iframe class="googledocsviewer" src="{{ current_lecture.lecture_slide.url }}" border="0" height: "600px"></iframe>
 
 
 {% endblock %}
