moved lecture_slide to separate entity to allow multiple lecture materials, fixed admin inline bug

--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -161,3 +161,8 @@ iframe {
 .panel .panel-heading {
   margin-bottom: 0;
 }
+
+/* since overriding default admin css, need to migrate some css over */
+.empty-form {
+  display: none;
+}
